# dep_class_diff

./: CONTRIBUTING.md  Cargo.toml  LICENSE  QUICKSTART.md  README.md  SETUP.md  install.sh
.github/: RELEASE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependencies.yml  release.yml
scripts/: release.sh
src/: main.rs
