[package]
name = "dep_class_diff"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP：比 reqwest 轻量，二进制通常更小
# 使用 native-tls 而不是 rustls，避免 ring 依赖导致的交叉编译问题
ureq = { version = "2.12", features = ["native-tls"], default-features = false }

# 解析 maven-metadata.xml：轻量快速
quick-xml = { version = "0.37", default-features = false }

# 读 jar(zip)
zip = { version = "2.2", default-features = false, features = ["deflate"] }

# CLI 参数解析
clap = { version = "4.5", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }

# 正则表达式（可选功能）
regex = { version = "1.10", optional = true, default-features = false, features = ["std"] }

# JSON 解析（用于 GitHub API）
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = ["pattern-matching", "github"]
pattern-matching = ["regex"]
github = ["serde", "serde_json"]

[profile.release]
# 进一步缩小体积
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = "symbols"

[profile.release-perf]
inherits = "release"
opt-level = 3
lto = "thin"